etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Mon Jan 27 21:57:44 2020
*mangle
:PREROUTING ACCEPT [130985:43141093]
:INPUT ACCEPT [104453:41749062]
:FORWARD ACCEPT [24053:1236664]
:OUTPUT ACCEPT [87665:26729669]
:POSTROUTING ACCEPT [111718:27966333]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Jan 27 21:57:44 2020
# Generated by iptables-save v1.6.1 on Mon Jan 27 21:57:44 2020
*nat
:PREROUTING ACCEPT [418:22764]
:INPUT ACCEPT [418:22764]
:OUTPUT ACCEPT [115:7726]
:POSTROUTING ACCEPT [6:594]
-A PREROUTING -d 10.0.250.2/32 -i collector_br -p tcp -j DNAT --to-destination 10.162.0.17
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -o ens4 -j MASQUERADE
COMMIT
# Completed on Mon Jan 27 21:57:44 2020
# Generated by iptables-save v1.6.1 on Mon Jan 27 21:57:44 2020
*filter
:INPUT ACCEPT [104453:41749062]
:FORWARD ACCEPT [24053:1236664]
:OUTPUT ACCEPT [87665:26729669]
:sshguard - [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -j sshguard
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Mon Jan 27 21:57:44 2020
